--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -30,4 +30,9 @@
      .mainHeader {
          font-size: 1.7em;
      }
+
+      .subHeader {
+      font-family: $headerFont;
+      font-size: 1.2em;
+  }
  }
